Added very simple login mechanism for testing navigation

--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 <header class="header">
     <p>Advisor Matcher</p>
 </header>
-<form method="post">
+<form method="post" action="public/php/login_exec.php">
     <div class="login">
         <label for="name">Username</label>
         <input type="text" name="name" id="name" class="textfield">
         <label for="pwd">Password</label>
-        <input type="text" name="pwd" id="pwd" class="textfield">
+        <input type="password" name="pwd" id="pwd" class="textfield">
         <input type="submit" name="login_submit" value="Login" class="button">
 
     </div>
