CSS tweaks part 1

--- a/index.html
+++ b/index.html
@@ -15,12 +15,13 @@
         <label for="pwd">Password</label>
         <input type="password" name="pwd" id="pwd" class="textfield">
         <input type="submit" name="login_submit" value="Login" class="button">
-
+        <input id="forgot_password" name="forgot_password" value="Forgot Passwordu" class="button">
     </div>
 </form>
 <footer>
     <div class="footer">
         <a href="#">102 User online</a>
+        |
         <a href="#">Impressum</a>
     </div>
 </footer>
