--- a/public/search.html
+++ b/public/search.html
@@ -39,12 +39,13 @@
             <div class="search">
 
                 <input type="text" name="search" class="textfield">
+                <br>
                 <input type="submit" name="search_submit" class="button" value="Search">
             </div>
         </form>
 
         <h2>Results</h2>
-        <table class="inst" style="width: 100%;">
+        <table class="inst">
             <tr style="text-align: left;">
                 <th>Date</th>
                 <th>Project</th>
