--- a/public/home.html
+++ b/public/home.html
@@ -18,8 +18,7 @@
 <body>
 <header class="header">
     <p>Advisor Matcher</p>
-
-    <div class="logindata"><p>User Maximilian Muster kxxxxxxx</p></div>
+    <div class="logindata"><p>Maximilian Muster kxxxxxxx</p></div>
 </header>
 <div class="wrapper">
     <div class="nav">
@@ -29,12 +28,9 @@
         <a href="news.html">News</a>
         <a href="contact.html">Contact</a>
         <a href="../index.html">Logout</a>
-
     </div>
-
     <div class="content">
         <h1>Welcome ...Name of stundent...</h1>
-
         <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et
             dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet
             clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet,
@@ -57,12 +53,9 @@
 
             Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim placerat
             facer</p>
-
         <h2>Recent Projects</h2>
-
         <ul>
             <li><a href="javascript:toggle('link1')">Project 1....more details</a>
-
                 <div style="display: none;" class="listing" id="link1">
                     Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut
                     labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores
@@ -90,9 +83,7 @@
                     placerat facer.... <a href="#">Long description</a>
                 </div>
             </li>
-
             <li><a href="javascript:toggle('link2')">Project 2.....more details</a>
-
                 <div style="display: none;" class="listing" id="link2">
                     Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut
                     labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores
@@ -120,9 +111,7 @@
                     placerat facer.... <a href="#">Long description</a>
                 </div>
             </li>
-
             <li><a href="javascript:toggle('link3')"> Project 3...more details</a>
-
                 <div style="display: none;" class="listing" id="link3">
                     Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut
                     labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores
@@ -150,10 +139,7 @@
                     placerat facer.... <a href="#">Long description</a>
                 </div>
             </li>
-
         </ul>
-
-
     </div>
 </div>
 </body>
