CSS tweaks part 2

--- a/public/contact.html
+++ b/public/contact.html
@@ -21,11 +21,12 @@
     </div>
 
     <div class="content">
+        <h2>Contact a user</h2>
         <form method="post" class="contact">
             <label for="name">Username</label>
             <input type="text" name="name" id="name" class="textfield"><br>
             <label for="mail">Email</label>
-            <input type="text" name="mail" id="mail" class="textfield" style="margin-left: 37px;"><br>
+            <input type="text" name="mail" id="mail" class="textfield"><br>
             <label for="text">Comment</label>
             <input type="text" name="text" id="text" class="textarea">
             <input type="submit" name="contact_submit" value="Send" class="button">
