--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
         <label for="pwd">Password</label>
         <input type="password" name="pwd" id="pwd" class="textfield">
         <input type="submit" name="login_submit" value="Login" class="button">
-        <input id="forgot_password" name="forgot_password" value="Forgot Passwordu" class="button">
+        <input id="forgot_password" name="forgot_password" value="Forgot Password" class="button">
     </div>
+
 </form>
 <footer>
     <div class="footer">
