--- a/public/home.html
+++ b/public/home.html
@@ -23,8 +23,8 @@
 <div class="wrapper">
     <div class="nav">
         <a href="#">Home</a>
-        <a href="search.html">Search</a>
-        <a href="browse.html">Browse</a>
+        <a href="search.php">Search</a>
+        <a href="browse.php">Browse</a>
         <a href="news.html">News</a>
         <a href="contact.html">Contact</a>
         <a href="../index.html">Logout</a>
