--- a/public/contact.html
+++ b/public/contact.html
@@ -13,7 +13,7 @@
 <div class="wrapper">
     <div class="nav">
         <a href="home.html">Home</a>
-        <a href="search.html">Search</a>
+        <a href="search.php">Search</a>
         <a href="#">Browse</a>
         <a href="news.html">News</a>
         <a href="contact.html">Contact</a>
